# PortfolioV2

./: .env.example  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yml  Makefile  README.md  compress_images.py  docker-compose.yml  netlify.toml  package-lock.json  package.json  pelicanconf.py  publishconf.py  pyproject.toml  ruff.toml  tailwind.config.js  vercel.json
.github/workflows/: ci.yml
config/settings/: base.py  dev.py  production.py
config/templates/: base.html
content/: robots.txt
content/blog/: hello-world.md  yet-another-rendering-strategy-post.md
content/home/: about.md  profile.json
content/images/favicons/: site.webmanifest
sitepages/: apps.py
static/: styles.css
theme/static/css/: app.css  prose.css
theme/static/js/: main.js
theme/templates/: article.html  base.html  blog.html  index.html
theme/templates/partials/: nav_links.html
