[project]
name = "portfoliov2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "dj-database-url>=3.1.0",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "wagtail>=7.2.1",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
